--- a/ReferenceManager.fsproj
+++ b/ReferenceManager.fsproj
@@ -15,9 +15,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Build" Version="17.3.1" ExcludeAssets="runtime" />
         <PackageReference Include="Microsoft.Build.Locator" Version="1.5.5" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="MvsSln" Version="2.6.1" />
         <PackageReference Include="Spectre.Console" Version="0.45.0" />
     </ItemGroup>
